--- a/css/styles.css
+++ b/css/styles.css
@@ -636,6 +636,10 @@ img {
     border-radius: 4px;
     border: 0;
     margin-left: 24px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-button:hover{
+    background-color: #404BBF;
 }
 .footer-svg-fly{
 
